objects/EPA_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>FTTA Soft Delete feature.</description>
        <inlineHelpText>Uncheck the record for Soft Delete.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Fees__c</fullName>
        <description>FTTA License. Created to capture the Additional Fees.</description>
        <inlineHelpText>Please enter the 'Additional Fees'.</inlineHelpText>
        <label>Additional Fees</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>Used in FTTA Application.</description>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>CRADA</fullName>
                </value>
                <value>
                    <fullName>Funded MTA</fullName>
                </value>
                <value>
                    <fullName>Materials CRADA</fullName>
                </value>
                <value>
                    <fullName>MTA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Related Amendments</inlineHelpText>
        <label>Parent Record</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>Amendment/s</relationshipLabel>
        <relationshipName>EPA_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowance_Holder__c</fullName>
        <description>User for sharing rules in the DCR application.</description>
        <label>Allowance Holder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>56 - OTAQ</fullName>
                </value>
                <value>
                    <fullName>58 - OAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_COR_Name__c</fullName>
        <description>Alt COR Name for DCR Agreements</description>
        <formula>Alt_Contracting_Officer_s_Rep_Alt_COR__r.LastName &amp; ", " &amp; Alt_Contracting_Officer_s_Rep_Alt_COR__r.FirstName</formula>
        <label>Alt_COR_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Contracting_Officer_s_Rep_Alt_COR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate COR for contract.</description>
        <inlineHelpText>Please enter the alternate COR for the contract vehicle.</inlineHelpText>
        <label>Alt Contracting Officer's Rep. (Alt COR)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DCR EPA Agreements (Alt Contracting Officer's Rep. (Alt COR))</relationshipLabel>
        <relationshipName>DCR_EPA_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt_PO_Name__c</fullName>
        <formula>Alternate_Project_Officer__r.LastName &amp; ", " &amp; Alternate_Project_Officer__r.FirstName</formula>
        <label>Alt PO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Project_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate Project Officer lookup to the contact object.</description>
        <inlineHelpText>Alternate Project Officer lookup.</inlineHelpText>
        <label>Alternate Project Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (Alternate Project Officer)</relationshipLabel>
        <relationshipName>DCR_EPA_Agreement_Alt_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Minimum_Fee__c</fullName>
        <description>FTTA License. Created to capture the 'Annual Minimum Fee' of EPA license.</description>
        <inlineHelpText>Please enter the  'Annual Minimum Fee'.</inlineHelpText>
        <label>Annual Minimum Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area_of_Tech_Transfer__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Required, alph-numeric. &lt;=140 characters.</inlineHelpText>
        <label>Area of Tech Transfer</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Account_Number__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Budget Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Comments__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Up to 1000 Characters</inlineHelpText>
        <label>Budget Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COR_Name__c</fullName>
        <formula>Contracting_Officer_Rep_COR__r.LastName &amp; ", " &amp;  Contracting_Officer_Rep_COR__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Name__c</fullName>
        <formula>Contract_Officer_CO__r.LastName &amp; ", " &amp; Contract_Officer_CO__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Id_2__c</fullName>
        <description>Case Id generation for the fiscal year.</description>
        <label>Case Id 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <description>Used in FTTA Application</description>
        <displayFormat>{000000}-{YY}</displayFormat>
        <inlineHelpText>Auto Generated Case Id</inlineHelpText>
        <label>EPA Case Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Ceiling__c</fullName>
        <description>Contract ceiling amount</description>
        <inlineHelpText>Please enter the contract-level ceiling amount</inlineHelpText>
        <label>Contract Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Description_2__c</fullName>
        <description>Second contract description field.</description>
        <inlineHelpText>Second contract description field.</inlineHelpText>
        <label>Contract Description 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contract_Description__c</fullName>
        <description>First Contract Description.</description>
        <inlineHelpText>First Contract Description Field.</inlineHelpText>
        <label>Contract Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contract_Grant_IA_Number__c</fullName>
        <description>Contract, Grant, or IA # depending on the DCR extramural vehicle type. Used for search layouts as to reduce the number of columns.</description>
        <formula>Contract_Number_No_Dashes__c &amp;  IF(ISBLANK(TEXT(Funding_Period__c)), "",   Master_Contract__r.Contract_Number_No_Dashes__c  &amp; "-" &amp;TEXT(Funding_Period__c)) &amp;  Grant_Number__c  &amp;  IA_Number__c</formula>
        <label>Contract/Grant/IA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_No_Dashes__c</fullName>
        <description>Contract Number without dashes or special characters</description>
        <inlineHelpText>Please enter the contract number without dashes or special characters.</inlineHelpText>
        <label>Contract Number (No Dashes)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Officer_CO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Officer</description>
        <inlineHelpText>Please enter the CO for the contract</inlineHelpText>
        <label>Contract Officer (CO)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DCR EPA Agreements (Contract Officer CO)</relationshipLabel>
        <relationshipName>DCR_EPA_Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Procurement_Office__c</fullName>
        <description>Procurement office for the contract</description>
        <label>Contract Procurement Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPOD - Cincinnati Procurement Operations Division</fullName>
                </value>
                <value>
                    <fullName>HPOD - Headquarters</fullName>
                </value>
                <value>
                    <fullName>RTPPOD - Research Triangle Park</fullName>
                </value>
                <value>
                    <fullName>SACO - Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Title__c</fullName>
        <description>Contract Title as is common for contracts at EPA. Contract name is not a common term.</description>
        <inlineHelpText>Please enter the contract title.</inlineHelpText>
        <label>Contract Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Type of contract</description>
        <inlineHelpText>Please enter the type of contract.</inlineHelpText>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed-Price</fullName>
                </value>
                <value>
                    <fullName>Cost-Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Incentive Contracts</fullName>
                </value>
                <value>
                    <fullName>Indefinite-Delivery</fullName>
                </value>
                <value>
                    <fullName>Time-and-Materials</fullName>
                </value>
                <value>
                    <fullName>BPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Officer_Rep_COR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>COR on the contract</description>
        <inlineHelpText>Please enter the COR for this contract vehicle</inlineHelpText>
        <label>Contracting Officer's Rep. (COR)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (Contracting Officer's Rep. (COR))</relationshipLabel>
        <relationshipName>DCR_EPA_Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Generic Description Field</description>
        <inlineHelpText>Generic Description Field</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>FTTA Application.</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Amendment_2__c</fullName>
        <description>FTTA Application. Created for the amendment number generation.</description>
        <label>EPA Amendment #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_File_2__c</fullName>
        <description>FTTA Application.</description>
        <externalId>true</externalId>
        <label>EPA File #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_File__c</fullName>
        <formula>IF(TEXT( Agreement_Type__c ) = 'Amendment', 
EPA_Amendment_2__c ,
IF(Case_Id_2__c != null,Case_Id_2__c ,Case_Id__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPA File # 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Goal__c</fullName>
        <description>Used in FTTA Application</description>
        <label>EPA Goal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead the agency through improved processes and adhere to the rule of law</fullName>
                </value>
                <value>
                    <fullName>Refocus the agency back to its core mission</fullName>
                </value>
                <value>
                    <fullName>Restore power to the states through cooperative federalism</fullName>
                </value>
                <value>
                    <fullName>Goal 1</fullName>
                </value>
                <value>
                    <fullName>Goal 2</fullName>
                </value>
                <value>
                    <fullName>Goal 3</fullName>
                </value>
                <value>
                    <fullName>Goal 4</fullName>
                </value>
                <value>
                    <fullName>Goal 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPA_Inventor__c</fullName>
        <description>FTTA License. Created to capture the EPA Inventor.</description>
        <inlineHelpText>Please select the valid 'EPA Inventor'.</inlineHelpText>
        <label>EPA Inventor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Participant__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Select participant's office.</inlineHelpText>
        <label>EPA Participant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPA Office</fullName>
                </value>
                <value>
                    <fullName>EPA ORD</fullName>
                </value>
                <value>
                    <fullName>EPA Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPA_in_kind_contribution__c</fullName>
        <description>Used in FTTA Application</description>
        <label>EPA in-kind contribution</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Contract vehicles End Date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Report_Recv_d__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Final Report Recv'd?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Period_Allowance_Holder__c</fullName>
        <formula>TEXT(Master_Contract__r.Allowance_Holder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Allowance Holder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Period_Ceiling__c</fullName>
        <description>Ceiling amount for the funding period.</description>
        <inlineHelpText>Ceiling amount for the funding period.</inlineHelpText>
        <label>Funding Period Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Period_Description__c</fullName>
        <description>Description for the funding period.</description>
        <inlineHelpText>Description for the funding period.</inlineHelpText>
        <label>Funding Period Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Period_End_Date__c</fullName>
        <description>End date of the contract funding period.</description>
        <inlineHelpText>End date of the contract funding period.</inlineHelpText>
        <label>Funding Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Period_Start_Date__c</fullName>
        <description>Start date of the contract funding period.</description>
        <inlineHelpText>Start date of the contract funding period.</inlineHelpText>
        <label>Funding Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Period__c</fullName>
        <description>Contract Funding Period.</description>
        <inlineHelpText>Contract Funding Period.</inlineHelpText>
        <label>Funding Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Ceiling__c</fullName>
        <description>Max ceiling for a grant agreement.</description>
        <inlineHelpText>Ceiling for a Grant agreement</inlineHelpText>
        <label>Grant Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <description>Grant Number restricted to 8 characters.</description>
        <inlineHelpText>8 character Grant #.</inlineHelpText>
        <label>Grant Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Title__c</fullName>
        <description>Grant Title.</description>
        <inlineHelpText>Grant Tile.</inlineHelpText>
        <label>Grant Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <description>Grant categorization field.</description>
        <label>Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STAG</fullName>
                </value>
                <value>
                    <fullName>Fellowships</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Environmental Education</fullName>
                </value>
                <value>
                    <fullName>Brownfields</fullName>
                </value>
                <value>
                    <fullName>Pollution Prevention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardcopy_Recv_d_Date__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Hardcopy Recv'd Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IA_Ceiling__c</fullName>
        <description>Ceiling for Interagency Agreement</description>
        <inlineHelpText>Ceiling for Interagency Agreement</inlineHelpText>
        <label>IA Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IA_Number__c</fullName>
        <description>Interagency Agreement Number. Only the middle 8 numbers of the full IA string.</description>
        <inlineHelpText>Interagency Agreement Number. Only the middle 8 numbers of the full IA string. Example, input 92396201 for DW-89-92396201-08.</inlineHelpText>
        <label>IA Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Title__c</fullName>
        <description>Interagency Agreement title.</description>
        <inlineHelpText>Interagency Agreement title.</inlineHelpText>
        <label>IA Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FTTA. Created to capture the lap contact of the agreement</description>
        <inlineHelpText>Select the lab contact for the EPA Agreement.</inlineHelpText>
        <label>Lab Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (Lab Contact)</relationshipLabel>
        <relationshipName>EPA_Agreements5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <description>FTTA Application</description>
        <label>Lab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NCCT</fullName>
                </value>
                <value>
                    <fullName>NERL</fullName>
                </value>
                <value>
                    <fullName>NRMRL</fullName>
                </value>
                <value>
                    <fullName>Office of Air and Radiation</fullName>
                </value>
                <value>
                    <fullName>Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>Office of Water</fullName>
                </value>
                <value>
                    <fullName>NHEERL</fullName>
                </value>
                <value>
                    <fullName>NHSRC</fullName>
                </value>
                <value>
                    <fullName>Office of Prevention - Pesticides and Toxic Substances</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Gulf Breeze</fullName>
                </value>
                <value>
                    <fullName>Corvallis</fullName>
                </value>
                <value>
                    <fullName>Athens</fullName>
                </value>
                <value>
                    <fullName>Duluth</fullName>
                </value>
                <value>
                    <fullName>Edison</fullName>
                </value>
                <value>
                    <fullName>OSP</fullName>
                </value>
                <value>
                    <fullName>Office of Compliance and Enforcement Assurance</fullName>
                </value>
                <value>
                    <fullName>NVFEL</fullName>
                </value>
                <value>
                    <fullName>R10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>FTTA License. Created to capture the license type.</description>
        <inlineHelpText>Please select the license type.</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-exclusive</fullName>
                    <default>true</default>
                    <label>Co-exclusive</label>
                </value>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Non-exclusive</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** Automatically Calculated ** SUM amount of all related line items. Used to calculate the ceiling remainders for IA, Grants, and Contracts.</description>
        <label>Line Item Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Alt_COR__c</fullName>
        <formula>Master_Contract__r.Alt_COR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Alt COR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_COR__c</fullName>
        <formula>Master_Contract__r.COR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract COR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_CO__c</fullName>
        <formula>Master_Contract__r.CO_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract CO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Ceiling__c</fullName>
        <formula>Master_Contract__r.Contract_Ceiling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Contract_End_Date__c</fullName>
        <formula>Master_Contract__r.Perf_Per_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Number__c</fullName>
        <formula>Master_Contract__r.Contract_Number_No_Dashes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Start_Date__c</fullName>
        <formula>Master_Contract__r.Perf_Per_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Title__c</fullName>
        <formula>Master_Contract__r.Contract_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Type__c</fullName>
        <formula>TEXT(Master_Contract__r.Contract_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Vendor__c</fullName>
        <formula>Master_Contract__r.Vendor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the master contract record that is then split-out by funding periods.</description>
        <inlineHelpText>Lookup the Master Contract record.</inlineHelpText>
        <label>Master Contract</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>EPA Agreements</relationshipLabel>
        <relationshipName>Master_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OGC_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Select OGC Attorney</inlineHelpText>
        <label>OGC Attorney</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (OGC Attorney)</relationshipLabel>
        <relationshipName>EPA_Agreements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OGC_Review_Needed__c</fullName>
        <description>FTTA. Created to capture user input if OGC review is needed</description>
        <inlineHelpText>Please Select if OGC Review is needed</inlineHelpText>
        <label>OGC Review Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ORD_National_Program__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Required - Select One</inlineHelpText>
        <label>ORD National Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air/Climate/Energy</fullName>
                </value>
                <value>
                    <fullName>Chemical Safety Sustainability</fullName>
                </value>
                <value>
                    <fullName>Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Human Health Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Non-ORD</fullName>
                </value>
                <value>
                    <fullName>Safe and Sustainable Waters</fullName>
                </value>
                <value>
                    <fullName>Sustainable and Healthy Communities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Reg_Lab_Div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Pick the Office/Region/Lab/Division</inlineHelpText>
        <label>Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EPA Agreements</relationshipLabel>
        <relationshipName>EPA_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outside_Funding__c</fullName>
        <description>Used to track outside funding on contracts or other agreements</description>
        <inlineHelpText>Used to track outside funding on contracts or other agreements</inlineHelpText>
        <label>Outside Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FTTA. Created to capture the owner for the epa agreement.</description>
        <inlineHelpText>Select the owner.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (Owner)</relationshipLabel>
        <relationshipName>EPA_Agreements6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Name__c</fullName>
        <description>PO text name from contact lookup.</description>
        <formula>Project_Officer__r.LastName &amp; ", " &amp;  Project_Officer__r.FirstName</formula>
        <label>PO Name</label>
        <type>Text</type>
    </fields>
</CustomObject>